<resources>
    <string name="app_name">Weipanbao</string>
    <string name="more">更多</string>
    <string name="individual_property">个人资产(元)</string>
    <string name="yinYuanQuan">银元券</string>
    <string name="live">直播</string>
    <string name="buy_up">买涨</string>
    <string name="buy_down">买跌</string>
    <string name="settings">设置</string>
    <string name="company_name">深圳市方圆华睿信息科技有限公司</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="confirm_modify">确认修改</string>
    <string name="joint_purchase_hall">合买大厅</string>
    <string name="my_purchase_hall">我的合买</string>
    <string name="profit_index">盈利指数</string>
    <string name="myself">我</string>
    <string name="customer_service">客服</string>
    <string name="retrive_cash">提现</string>
    <string name="charge">充值</string>
    <string name="important_alert">重要提醒</string>
    <string name="opinion_feedback">建议反馈</string>
    <string name="common_issues">常见问题</string>
    <string name="history_feedback">历史反馈</string>
    <string name="i_want_feedback">我要反馈</string>
    <string name="issue_content">问题内容</string>
    <string name="user_feedback">用户反馈</string>
    <string name="catogory_tabs">分类标签</string>
    <string name="register">注册</string>
    <string name="plz_input_phone_number">请输入手机号码</string>
    <string name="plz_input_pic_verify_code">请输入图形验证码</string>
    <string name="request_verify_code">获取验证码</string>
    <string name="plz_input_sms_verify_code">请输入短信验证码</string>
    <string name="plz_input_password">请输入密码</string>
    <string name="plz_confirm_password">请确认密码</string>
    <string name="login">登录</string>
    <string name="fetch_sms_verify_code">获取短信验证码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="phoneNum">手机号码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
