<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#dcdcdc">
<!--title bar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#FF03010E">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/down_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_issues"
            android:layout_centerInParent="true"
            android:textColor="#ffffffff"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/history_feedback"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:textColor="#ffffffff"/>
    </RelativeLayout>

    <!--i want feedback-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="#ffffffff">
        <ImageView
            android:id="@+id/iv_i_want_feedback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/down_arrow"

            />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/i_want_feedback"
    android:layout_toRightOf="@id/iv_i_want_feedback"
    android:layout_marginLeft="20dp"
    android:layout_centerVertical="true"
    />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/down_arrow"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <!--common issue-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_issues"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_content"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/down_arrow"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>