<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.fangyuan.weipanbao.ui.AccountPwdLoginFragment">

    <!-- all line container-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/page_padding_left"
        android:paddingRight="@dimen/page_padding_left"

        >
        <!--phone num line-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_corner_rectangle"
            android:paddingTop="@dimen/line_padding_top"
            android:paddingBottom="@dimen/line_padding_top"
            android:paddingLeft="@dimen/line_padding_left"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/phoneNum"
                android:textSize="@dimen/content_normal_font_size"
                />

        </LinearLayout>
        <!--line pic verify code-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_margin"
            >
            <!--pic vcode answer-->
            <LinearLayout
                android:id="@+id/ll_pic_vcode_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/shape_round_corner_rectangle"
                android:paddingTop="@dimen/line_padding_top"
                android:paddingBottom="@dimen/line_padding_top"

                android:paddingLeft="@dimen/line_padding_left"
                android:paddingRight="@dimen/line_padding_left"
                >
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textSize="@dimen/content_normal_font_size"
                    android:hint="@string/plz_input_sms_verify_code"
                    />

            </LinearLayout>
            <!--pic vefiry code-->
            <TextView
                android:layout_width="120dp"
                android:layout_height="@dimen/icon_width"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:textSize="@dimen/content_normal_font_size"
                android:text="@string/request_verify_code"
                android:layout_centerVertical="true"
                android:src="#dcdcdc"/>
        </RelativeLayout>
        <!--password-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_long_btn_margin"
            android:text="@string/login"
            android:layout_marginLeft="@dimen/long_btn_margin_left"
            android:layout_marginRight="@dimen/long_btn_margin_left"
            android:background="@drawable/shape_round_corner_rectangle_solid_gray"/>
    </LinearLayout>



</FrameLayout>
