<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--title bar-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_back"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register"
    android:layout_centerInParent="true"
    android:textSize="25sp"/>
    </RelativeLayout>
    <!--divider-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdcdc"/>
    <!--phone number-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>
        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plz_input_phone_number"
            android:background="@null"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
<!--pic verify code-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/plz_input_pic_verify_code"
                android:background="@null"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
<!--pic verify code -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
            <ImageView
                android:id="@+id/iv_request_pic_vcode"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:src="@mipmap/ic_launcher"/>
        </LinearLayout>
    </RelativeLayout>
    <!--sms verify code-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/iv_sms_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/i_want_feedback"
            android:layout_toRightOf="@id/iv_sms_verify_code"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_request_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_verify_code"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <!--password-->
    <!--confirm password-->

    <!--register button-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#ffffffff"
        android:textSize="25sp"
        android:gravity="center"
        android:padding="10dp"
        android:background="@mipmap/ic_login_disable"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"/>
</LinearLayout>