<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.fangyuan.weipanbao.ui.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffe4b5">
        <!--更多-->
        <LinearLayout
            android:id="@+id/ll_more"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/view_anchor"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:text="@string/more"

                />
        </LinearLayout>
        <!--个人资产-->
        <LinearLayout
            android:id="@+id/ll_individual_property"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/ll_more"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="0.00"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/individual_property"
                android:textSize="15sp" />
        </LinearLayout>

        <!--充值-->
        <RelativeLayout
            android:id="@+id/rl_charge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/ll_individual_property">

            <Button
                android:id="@+id/btn_charge"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:text="充值" />

            <TextView
                android:id="@+id/tv_yinYuanQuan_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/btn_charge"
                android:text="12" />

            <TextView
                android:id="@+id/tv_yinYuanQuan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/tv_yinYuanQuan_value"
                android:layout_toRightOf="@id/btn_charge"
                android:gravity="bottom"
                android:text="@string/yinYuanQuan" />
        </RelativeLayout>
        <!--直播-->
        <FrameLayout
            android:id="@+id/fl_live"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/rl_charge">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/live" />

        </FrameLayout>
        <!--message -->
        <FrameLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/fl_live">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="8" />
        </FrameLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_chart"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="#ff8080">

        <com.fangyuan.weipanbao.view.LineChartStripSV2
            android:id="@+id/sv_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <!--买涨买跌-->
    <RelativeLayout
        android:id="@+id/rl_footer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#8080ff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--买涨-->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFC22413">

                <ImageView
                    android:id="@+id/iv_up_arrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerInParent="true"
                    android:background="@mipmap/up_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_up_arrow"
                    android:layout_centerHorizontal="true"
                    android:text="@string/buy_up"
                    android:textColor="#FFFFFFFF" />
            </RelativeLayout>
            <!--滚轮-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.fangyuan.weipanbao.view.WheelView
                    android:id="@+id/wheelView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <!--买跌-->
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FF40E40A">

                <ImageView
                    android:id="@+id/iv_down_arrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerInParent="true"
                    android:background="@mipmap/down_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_down_arrow"
                    android:layout_centerHorizontal="true"
                    android:text="@string/buy_down"
                    android:textColor="#FFFFFFFF" />
            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/down_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:hint="暂无最新消息" />
    </LinearLayout>
</LinearLayout>
